--- a/index.html
+++ b/index.html
@@ -6,115 +6,6 @@
 <title>Славянский клуб</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="chat.css">
-
-<!-- Firebase Scripts -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-
-<script>
-  // Configuração do Firebase
-  const firebaseConfig = {
-    apiKey: "SEU_API_KEY",
-    authDomain: "SEU_AUTH_DOMAIN",
-    projectId: "SEU_PROJECT_ID",
-    storageBucket: "SEU_STORAGE_BUCKET",
-    messagingSenderId: "SEU_MESSAGING_SENDER_ID",
-    appId: "SEU_APP_ID"
-  };
-  firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
-
-  // Referências aos elementos
-  const loginBtn = document.getElementById('loginBtn');
-  const chatBtn = document.getElementById('chatBtn');
-  const chatWindow = document.getElementById('chatWindow');
-
-  // Checa se usuário está logado ao carregar a página
-  auth.onAuthStateChanged(user => {
-    if (user) {
-      loginBtn.textContent = `Olá, ${user.email}`;
-      chatBtn.style.display = 'block';
-    } else {
-      loginBtn.textContent = 'Login / Cadastro';
-      chatBtn.style.display = 'none';
-      chatWindow.style.display = 'none';
-    }
-  });
-
-  // Abrir modal de login/cadastro
-  loginBtn.addEventListener('click', () => {
-    const email = prompt("Digite seu email:");
-    const password = prompt("Digite sua senha:");
-
-    if (!email || !password) return alert("Email e senha são obrigatórios.");
-
-    // Tenta login
-    auth.signInWithEmailAndPassword(email, password)
-      .then(userCredential => {
-        alert("Login efetuado com sucesso!");
-      })
-      .catch(error => {
-       if (error.code === "auth/user-not-found") {
-    const confirmCreate = confirm("Usuário não encontrado. Deseja criar uma conta?");
-    if (confirmCreate) {
-        auth.createUserWithEmailAndPassword(email, password)
-          .then(userCredential => alert("Conta criada com sucesso!"))
-          .catch(err => alert("Erro ao criar conta: " + err.message));
-    }
-} else {
-    alert("Erro no login: " + error.message);
-}
-
-            .catch(err => {
-              alert("Erro ao criar conta: " + err.message);
-            });
-        } else {
-          alert("Erro no login: " + error.message);
-        }
-      });
-  });
-
-  // Abrir/Fechar chat apenas se logado
-  chatBtn.addEventListener('click', () => {
-    const user = auth.currentUser;
-    if (!user) {
-      alert("Você precisa estar logado para usar o chat.");
-      return;
-    }
-    chatWindow.style.display = chatWindow.style.display === 'flex' ? 'none' : 'flex';
-  });
-
-  // Envio de mensagens (exemplo simples)
-  const sendBtn = document.getElementById('sendBtn');
-  const msgInput = document.getElementById('msgInput');
-  const chatMessages = document.getElementById('chatMessages');
-
-  sendBtn.addEventListener('click', () => {
-    const user = auth.currentUser;
-    if (!user) {
-      alert("Você precisa estar logado para enviar mensagens.");
-      return;
-    }
-    const msg = msgInput.value.trim();
-    if (!msg) return;
-    const p = document.createElement('p');
-    p.textContent = `Você: ${msg}`;
-    chatMessages.appendChild(p);
-    msgInput.value = '';
-    chatMessages.scrollTop = chatMessages.scrollHeight;
-
-    // Aqui você pode adicionar lógica de bot ou salvar em DB
-    const botReply = document.createElement('p');
-    botReply.textContent = `Dimitri: Recebi sua mensagem!`;
-    chatMessages.appendChild(botReply);
-    chatMessages.scrollTop = chatMessages.scrollHeight;
-  });
-</script>
-
-
-
-
-
 <style>
   /* ===== Overlay com animação ===== */
   .overlay {
@@ -203,10 +94,8 @@
 <header>
   <h1>Славянский клуб</h1>
   <button class="login" id="loginBtn">Login</button>
-  <button id="logoutBtn" style="display:none;">Logout</button>
-
+  <button class="login" id="logoutBtn" style="display:none;">Logout</button>
 </header>
-
 <aside>
   <nav>
     <a href="index.html">📈 Selecionar</a>
@@ -691,5 +580,147 @@ FrasesDeConvercacao: [
 <script src="script.js"></script>
 
 
+<!-- Firebase Scripts -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+
+<script>
+   // Configuração do Firebase
+  const firebaseConfig = {
+    apiKey: "AIzaSyCVt4eQOSUMhtKTUc89lAIM-AwrPakEOOI",
+    authDomain: "clube-eslavo-dimitri.firebaseapp.com",
+    projectId: "clube-eslavo-dimitri",
+    storageBucket: "clube-eslavo-dimitri.firebasestorage.app",
+    messagingSenderId: "696802076277",
+    appId: "1:696802076277:web:3be4a9fb64001e25cefa3c",
+    measurementId: "G-1H63WPQT0V"
+  };
+
+  // Inicializa Firebase
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+
+  // Referências aos elementos
+  const loginBtn = document.getElementById('loginBtn');
+  const chatBtn = document.getElementById('chatBtn');
+  const chatWindow = document.getElementById('chatWindow');
+
+  // Checa se usuário está logado ao carregar a página
+  auth.onAuthStateChanged(user => {
+    if (user) {
+      loginBtn.textContent = `Olá, ${user.email}`;
+      chatBtn.style.display = 'block';
+    } else {
+      loginBtn.textContent = 'Login / Cadastro';
+      chatBtn.style.display = 'none';
+      chatWindow.style.display = 'none';
+    }
+  });
+
+  // Abrir modal de login/cadastro
+  // Redirecionar para tela de login.html ao clicar
+      loginBtn.addEventListener('click', () => {
+      window.location.href = "login.html";
+});
+
+
+    if (!email || !password) return alert("Email e senha são obrigatórios.");
+
+    // Tenta login
+    auth.signInWithEmailAndPassword(email, password)
+      .then(userCredential => {
+        alert("Login efetuado com sucesso!");
+      })
+      .catch(error => {
+       if (error.code === "auth/user-not-found") {
+    const confirmCreate = confirm("Usuário não encontrado. Deseja criar uma conta?");
+    if (confirmCreate) {
+        auth.createUserWithEmailAndPassword(email, password)
+          .then(userCredential => alert("Conta criada com sucesso!"))
+          .catch(err => alert("Erro ao criar conta: " + err.message));
+    }
+} else {
+    alert("Erro no login: " + error.message);
+}
+
+            .catch(err => {
+              alert("Erro ao criar conta: " + err.message);
+            });
+        } else {
+          alert("Erro no login: " + error.message);
+        }
+      });
+  });
+
+  // Abrir/Fechar chat apenas se logado
+  chatBtn.addEventListener('click', () => {
+    const user = auth.currentUser;
+    if (!user) {
+      alert("Você precisa estar logado para usar o chat.");
+      return;
+    }
+    chatWindow.style.display = chatWindow.style.display === 'flex' ? 'none' : 'flex';
+  });
+
+  // Envio de mensagens (exemplo simples)
+  const sendBtn = document.getElementById('sendBtn');
+  const msgInput = document.getElementById('msgInput');
+  const chatMessages = document.getElementById('chatMessages');
+
+  sendBtn.addEventListener('click', () => {
+    const user = auth.currentUser;
+    if (!user) {
+      alert("Você precisa estar logado para enviar mensagens.");
+      return;
+    }
+    const msg = msgInput.value.trim();
+    if (!msg) return;
+    const p = document.createElement('p');
+    p.textContent = `Você: ${msg}`;
+    chatMessages.appendChild(p);
+    msgInput.value = '';
+    chatMessages.scrollTop = chatMessages.scrollHeight;
+
+    // Aqui você pode adicionar lógica de bot ou salvar em DB
+    const botReply = document.createElement('p');
+    botReply.textContent = `Dimitri: Recebi sua mensagem!`;
+    chatMessages.appendChild(botReply);
+    chatMessages.scrollTop = chatMessages.scrollHeight;
+  });
+</script>
+  
+<script>
+  // Botão de login redireciona para login.html
+  document.getElementById("loginBtn").addEventListener("click", function() {
+    window.location.href = "login.html";
+  });
+// ===== Gerenciar Login e Logout =====
+const loginBtn = document.getElementById('loginBtn');
+const logoutBtn = document.getElementById('logoutBtn');
+// Simulação de login
+loginBtn.addEventListener('click', () => {
+  // Salva estado de login no localStorage
+  localStorage.setItem('userLogged', 'true');
+  loginBtn.style.display = 'none';
+  logoutBtn.style.display = 'inline-block';
+});
+// Logout sem sair da página
+logoutBtn.addEventListener('click', () => {
+  localStorage.removeItem('userLogged');
+  loginBtn.style.display = 'inline-block';
+  logoutBtn.style.display = 'none';
+  alert('Você saiu, mas permanecerá nesta página.');
+});
+// Verificar estado de login ao carregar a página
+window.addEventListener('load', () => {
+  if (localStorage.getItem('userLogged') === 'true') {
+    loginBtn.style.display = 'none';
+    logoutBtn.style.display = 'inline-block';
+  } else {
+    loginBtn.style.display = 'inline-block';
+    logoutBtn.style.display = 'none';
+  }
+});
+</script>
 </body>
 </html>
