--- a/jogo.html
+++ b/jogo.html
@@ -144,6 +144,40 @@
     #chatInput input { flex: 1; border: none; padding: 6px; outline: none; font-size: 0.9em; }
     #chatInput button { background: #4CAF50; color: white; border: none; padding: 6px 10px; cursor: pointer; font-size: 0.9em; }
     #chatInput button:hover { background: #45a049; }
+
+@media screen and (max-width: 768px) {
+  aside {
+    position: fixed;
+    left: -100%;  /* fora da tela */
+    top: 0;
+    width: 250px;
+    height: 100%;
+    background: #fff;
+    transition: left 0.3s;
+    z-index: 1000;
+  }
+
+  aside.show {
+    left: 0;
+  }
+
+  #menuBtn {
+    display: block; /* mostrar botão no mobile */
+    background: #4CAF50;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    font-size: 1.5em;
+    cursor: pointer;
+    border-radius: 4px;
+    margin-right: 10px;
+  }
+}
+
+
+
+
+
   </style>
 </head>
 <body>
@@ -251,4 +285,13 @@
   <!-- Scripts -->
   <script src="jogo.js"></script>
   <script src="chat.js"></script>
+
+<script>
+  const aside = document.querySelector('aside');
+  const menuBtn = document.getElementById('menuBtn');
+  menuBtn.addEventListener('click', () => aside.classList.toggle('show'));
+</script>
+
+
+</body>
 </html>
