--- a/index.html
+++ b/index.html
@@ -7,37 +7,56 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="chat.css">
 <style>
-  /* ===== Overlay com animação ===== */
-  .overlay {
-    display: none;
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background: rgba(0,0,0,0.7);
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-  }
-  .overlay.show {
-    display: flex;
-    opacity: 1;
-  }
-  .overlay-content {
-    background: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    max-width: 90%;
-    max-height: 90%;
-    overflow-y: auto;
-    position: relative;
-    transform: scale(0.8);
-    transition: transform 0.3s ease;
-  }
-  .overlay.show .overlay-content {
-    transform: scale(1);
-  }
+ /* ===== Overlay com animação ===== */
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.7);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.overlay.show {
+  display: flex;
+  opacity: 1;
+}
+
+.overlay-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 90%;
+  max-height: 90%;
+  overflow-y: auto;
+  position: relative;
+  transform: scale(0.8);
+  transition: transform 0.3s ease;
+  text-align: center; /* centraliza o conteúdo */
+  font-size: 1.5em;  /* aumenta o tamanho do texto */
+}
+
+.overlay.show .overlay-content {
+  transform: scale(1);
+}
+
+.overlay-content .word {
+  display: inline-block;
+  margin: 0 5px;
+  cursor: pointer;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: background 0.2s, color 0.2s;
+}
+
+.overlay-content .word.selected {
+  background: #4CAF50; /* cor quando selecionada */
+  color: white;        /* cor da letra quando selecionada */
+}
   .close-btn {
     position: absolute;
     top: 10px;
@@ -197,6 +216,35 @@
     <div id="overlayBody"></div>
   </div>
 </div>
+
+
+
+<script>
+// Função para abrir overlay e mostrar palavras
+function openOverlay(wordsArray) {
+  const overlay = document.getElementById('overlayModal');
+  const overlayBody = document.getElementById('overlayBody');
+  
+  overlayBody.innerHTML = ''; // limpa conteúdo anterior
+
+  wordsArray.forEach(word => {
+    const span = document.createElement('span');
+    span.classList.add('word');
+    span.textContent = word;
+    span.addEventListener('click', () => {
+      span.classList.toggle('selected'); // alterna cor ao clicar
+    });
+    overlayBody.appendChild(span);
+  });
+
+  overlay.classList.add('show');
+}
+
+// Fechar overlay
+function closeOverlay() {
+  document.getElementById('overlayModal').classList.remove('show');
+}
+</script>
 
 <!-- Chat Flutuante -->
 <button id="chatBtn">💬</button>
@@ -688,15 +736,19 @@ FrasesDeConvercacao: [
     chatMessages.scrollTop = chatMessages.scrollHeight;
   });
 </script>
-  
+
 <script>
   // Botão de login redireciona para login.html
   document.getElementById("loginBtn").addEventListener("click", function() {
     window.location.href = "login.html";
   });
+
+
+
 // ===== Gerenciar Login e Logout =====
 const loginBtn = document.getElementById('loginBtn');
 const logoutBtn = document.getElementById('logoutBtn');
+
 // Simulação de login
 loginBtn.addEventListener('click', () => {
   // Salva estado de login no localStorage
@@ -704,6 +756,7 @@ loginBtn.addEventListener('click', () => {
   loginBtn.style.display = 'none';
   logoutBtn.style.display = 'inline-block';
 });
+
 // Logout sem sair da página
 logoutBtn.addEventListener('click', () => {
   localStorage.removeItem('userLogged');
@@ -711,6 +764,7 @@ logoutBtn.addEventListener('click', () => {
   logoutBtn.style.display = 'none';
   alert('Você saiu, mas permanecerá nesta página.');
 });
+
 // Verificar estado de login ao carregar a página
 window.addEventListener('load', () => {
   if (localStorage.getItem('userLogged') === 'true') {
@@ -721,13 +775,9 @@ window.addEventListener('load', () => {
     logoutBtn.style.display = 'none';
   }
 });
+
 </script>
-<button id="menuBtn">☰</button>
-<script>
-  const aside = document.querySelector('aside');
-  const menuBtn = document.getElementById('menuBtn');
-  menuBtn.addEventListener('click', () => aside.classList.toggle('show'));
-</script>
+<script src="overlay.js"></script>
+
 </body>
 </html>
-
