--- a/jogo.html
+++ b/jogo.html
@@ -1,182 +1,187 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🎮 Jogos - Славянский клуб</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      overflow: hidden; /* Remove scroll */
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      color: #333;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>🎮 Jogos - Славянский клуб</title>
+<style>
+/* ===== RESET & BASE ===== */
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background: #f5f5f5;
+    color: #333;
+    overflow: hidden;
+}
 
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-    main .content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-      width: 90vw;
-      height: 90vh;
-      max-width: 900px;
-      max-height: 700px;
-      padding: 10px;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-    }
+/* ===== MAIN CONTAINER ===== */
+main {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-    #gameArea { 
-      display: grid; 
-      grid-template-columns: repeat(4, 60px); 
-      grid-template-rows: repeat(4, 60px); 
-      gap: 10px; 
-      justify-content: center; 
-      margin: 10px 0; 
-    }
+main .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 90vw;
+    max-width: 900px;
+    height: 90vh;
+    max-height: 700px;
+    padding: 15px;
+    background: #fff;
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+    box-sizing: border-box;
+}
 
-    .square { 
-      width: 100%; 
-      height: 100%; 
-      border-radius: 8px; 
-      cursor: pointer; 
-      border: 2px solid #333; 
-      transition: all 0.3s; 
-      display: flex;
-      flex-direction: column;
-      align-items: center; 
-      justify-content: center;
-      overflow: hidden;
-      background: #222;
-      color: #fff;
-      font-weight: bold;
-    }
+/* ===== GAME AREA ===== */
+#gameArea {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 10px;
+    width: 100%;
+    flex: 1; /* preenche verticalmente */
+}
 
-    .square span { font-size: 1.2em; }
-    .square .itemName { font-size: 0.9em; margin-top: 4px; display: block; text-align: center; }
-    .square.wrong { background-color: #ffcdd2; border-color: #f44336; }
-    .square.correct { background-color: #c8e6c9; border-color: #4CAF50; }
-    .neon { box-shadow: 0 0 8px #fff,0 0 12px #0ff,0 0 20px #0ff,0 0 30px #0ff; transform: scale(1.1); transition: all 0.3s; }
+.square {
+    border-radius: 8px;
+    cursor: pointer;
+    border: 2px solid #333;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    background: #222;
+    color: #fff;
+    font-weight: bold;
+    transition: all 0.3s;
+}
+.square span { font-size: 1.2em; text-align: center; }
+.square .itemName { font-size: 0.9em; margin-top: 4px; display: block; text-align: center; }
+.square.wrong { background-color: #ffcdd2; border-color: #f44336; }
+.square.correct { background-color: #c8e6c9; border-color: #4CAF50; }
+.neon { box-shadow: 0 0 8px #fff,0 0 12px #0ff,0 0 20px #0ff,0 0 30px #0ff; transform: scale(1.1); }
 
-    #gameInfo { text-align: center; font-size: 1em; font-weight: bold; }
-    #score { text-align: center; font-size: 0.9em; margin-top: 5px; }
-    #timerBarContainer { width: 70%; height: 10px; background: #ccc; margin: 5px auto; border-radius: 8px; overflow: hidden; }
-    #timerBar { height: 100%; width: 100%; background: #0ff; transition: width 0.1s linear; }
-    #controls { text-align: center; margin-top: 8px; }
-    #controls button { padding: 4px 10px; margin: 0 3px; font-size: 0.9em; cursor: pointer; }
+/* ===== GAME INFO ===== */
+#gameInfo { text-align: center; font-size: 1em; font-weight: bold; margin:5px 0; }
+#score { text-align: center; font-size: 0.9em; margin-top: 5px; }
+#timerBarContainer { width: 70%; height: 10px; background: #ccc; margin: 5px auto; border-radius: 8px; overflow: hidden; }
+#timerBar { height: 100%; width: 100%; background: #0ff; transition: width 0.1s linear; }
 
-    /* ===== Chat Flutuante ===== */
-    #chatBtn {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      background: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      font-size: 1.2em;
-      cursor: pointer;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      z-index: 2000;
-    }
+/* ===== CONTROLS ===== */
+#controls { text-align: center; margin-top: 8px; }
+#controls button { padding: 6px 12px; margin: 0 4px; font-size: 0.9em; cursor: pointer; border: none; border-radius:6px; background:#4CAF50; color:white; transition:0.2s; }
+#controls button:hover { background:#45a049; }
 
-    #chatWindow {
-      position: absolute;
-      bottom: 70px;
-      right: 10px;
-      width: 250px;
-      height: 300px;
-      background: white;
-      border: 2px solid #4CAF50;
-      border-radius: 12px;
-      display: none;
-      flex-direction: column;
-      overflow: hidden;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      z-index: 2000;
-    }
+/* ===== HEADER ===== */
+header {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    padding: 10px 15px;
+    background:#4CAF50;
+    color:white;
+    text-align:center;
+    font-size:1.5em;
+    font-weight:bold;
+    box-shadow:0 2px 6px rgba(0,0,0,0.2);
+    z-index:1000;
+}
+header button { margin-left: 20px; padding:3px 8px; font-size:0.8em; cursor:pointer; border:none; border-radius:4px; background:white; color:#4CAF50; }
 
-    #chatMessages {
-      flex: 1;
-      padding: 10px;
-      overflow-y: auto;
-      font-size: 0.8em;
-      display: flex;
-      flex-direction: column;
-    }
-
-    #chatMessages p {
-      margin: 5px 0;
-      padding: 6px;
-      border-radius: 6px;
-      max-width: 80%;
-    }
-
-    .userMsg { background: #e0f7e9; align-self: flex-end; }
-    .botMsg { background: #f0f0f0; align-self: flex-start; }
-
-    #chatInput { display: flex; border-top: 1px solid #ddd; }
-    #chatInput input { flex: 1; border: none; padding: 6px; outline: none; font-size: 0.9em; }
-    #chatInput button { background: #4CAF50; color: white; border: none; padding: 6px 10px; cursor: pointer; font-size: 0.9em; }
-    #chatInput button:hover { background: #45a049; }
-  </style>
+/* ===== CHAT FLUTUANTE ===== */
+#chatBtn {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    background: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    font-size: 1.2em;
+    cursor: pointer;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    z-index: 2000;
+}
+#chatWindow {
+    position: absolute;
+    bottom: 70px;
+    right: 10px;
+    width: 250px;
+    height: 300px;
+    background: white;
+    border: 2px solid #4CAF50;
+    border-radius: 12px;
+    display: none;
+    flex-direction: column;
+    overflow: hidden;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    z-index: 2000;
+}
+#chatMessages { flex:1; padding:10px; overflow-y:auto; font-size:0.8em; display:flex; flex-direction:column; }
+#chatMessages p { margin:5px 0; padding:6px; border-radius:6px; max-width:80%; }
+.userMsg { background:#e0f7e9; align-self:flex-end; }
+.botMsg { background:#f0f0f0; align-self:flex-start; }
+#chatInput { display:flex; border-top:1px solid #ddd; }
+#chatInput input { flex:1; border:none; padding:6px; outline:none; font-size:0.9em; }
+#chatInput button { background:#4CAF50; color:white; border:none; padding:6px 10px; cursor:pointer; font-size:0.9em; }
+#chatInput button:hover { background:#45a049; }
+</style>
 </head>
 <body>
-  <!-- Header -->
-  <header>
-    <h1 id="siteTitle">Славянский клуб</h1>
-    <button id="languageToggle" style="margin-left:20px;">PT</button>
-  </header>
 
+<header>
+  <span id="siteTitle">Славянский клуб</span>
+  <button id="languageToggle">PT</button>
+</header>
 
-
-  <!-- Main -->
-  <main>
-    <div class="content">
-      <h2>🎮 <span id="gameTitle">Jogo Interativo</span></h2>
-      <div id="gameInfo"></div>
-      <div id="timerBarContainer"><div id="timerBar"></div></div>
-      <div id="gameArea"></div>
-      <div id="score">❤️ 5 | ✅ 0 | ❌ 0 | Nível 1 | Rodada 1/10 | Acertos: 0%</div>
-      <div id="controls">
-        <button id="playBtn">▶ Play</button>
-        <button id="restartBtn">Recomeçar</button>
-        <button id="stopBtn">Parar</button>
-        <div id="backButtonContainer" style="margin-top:10px;">
-          <button id="backBtn" onclick="window.location.href='index.html'">🔙 Voltar</button>
-        </div>
+<main>
+  <div class="content">
+    <h2>🎮 <span id="gameTitle">Jogo Interativo</span></h2>
+    <div id="gameInfo"></div>
+    <div id="timerBarContainer"><div id="timerBar"></div></div>
+    <div id="gameArea"></div>
+    <div id="score">❤️ 5 | ✅ 0 | ❌ 0 | Nível 1 | Rodada 1/10 | Acertos: 0%</div>
+    <div id="controls">
+      <button id="playBtn">▶ Play</button>
+      <button id="restartBtn">Recomeçar</button>
+      <button id="stopBtn">Parar</button>
+      <div style="margin-top:10px;">
+        <button id="backBtn" onclick="window.location.href='index.html'">🔙 Voltar</button>
       </div>
     </div>
-  </main>
-
-  <!-- Chat Flutuante -->
-  <button id="chatBtn">💬</button>
-  <div id="chatWindow">
-    <div id="chatMessages">
-      <p class="botMsg">👋 Olá! Eu sou o Dimitri, seu assistente.</p>
-    </div>
-    <div id="chatInput">
-      <input type="text" id="msgInput" placeholder="Digite sua mensagem...">
-      <button id="sendBtn">➤</button>
-    </div>
   </div>
+</main>
 
-  <!-- Scripts -->
-  <script src="jogo.js"></script>
-  <script src="chat.js"></script>
+<button id="chatBtn">💬</button>
+<div id="chatWindow">
+  <div id="chatMessages">
+    <p class="botMsg">👋 Olá! Eu sou o Dimitri, seu assistente.</p>
+  </div>
+  <div id="chatInput">
+    <input type="text" id="msgInput" placeholder="Digite sua mensagem...">
+    <button id="sendBtn">➤</button>
+  </div>
+</div>
+
+<script src="jogo.js"></script>
+<script src="chat.js"></script>
+
 </body>
 </html>
