--- a/jogo.html
+++ b/jogo.html
@@ -7,148 +7,204 @@
 <style>
 /* ===== RESET & BASE ===== */
 html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background: #f5f5f5;
-    color: #333;
-    overflow: hidden;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background: #f5f5f5;
+  color: #333;
+  display: flex;
+  flex-direction: column;
+  transition: background 0.3s, color 0.3s;
 }
 
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+/* ===== HEADER ===== */
+header {
+  background: white;
+  color: #4CAF50;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 12px 20px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  font-size: 1.2em;
+  font-weight: bold;
 }
 
-/* ===== MAIN CONTAINER ===== */
+header #siteTitle {
+  font-size: 1.3em;
+}
+
+header .right-controls {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+header button {
+  border: 1px solid #4CAF50;
+  background: #4CAF50;
+  color: white;
+  border-radius: 4px;
+  padding: 5px 10px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+header button:hover {
+  background: #45a049;
+}
+
+/* ===== MAIN CONTENT ===== */
 main {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 15px;
+  box-sizing: border-box;
 }
 
-main .content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    width: 90vw;
-    max-width: 900px;
-    height: 90vh;
-    max-height: 700px;
-    padding: 15px;
-    background: #fff;
-    border-radius: 12px;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-    box-sizing: border-box;
+.content {
+  background: #fff;
+  border-radius: 12px;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+  width: 90%;
+  max-width: 900px;
+  height: 80vh; /* subido para ficar mais visível */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 20px;
+  box-sizing: border-box;
+  margin-top: 20px;
 }
 
 /* ===== GAME AREA ===== */
 #gameArea {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    gap: 10px;
-    width: 100%;
-    flex: 1; /* preenche verticalmente */
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  width: 100%;
+  flex-grow: 1;
+  margin-top: 10px;
 }
 
 .square {
-    border-radius: 8px;
-    cursor: pointer;
-    border: 2px solid #333;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    background: #222;
-    color: #fff;
-    font-weight: bold;
-    transition: all 0.3s;
+  border-radius: 8px;
+  cursor: pointer;
+  border: 2px solid #333;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  background: #222;
+  color: #fff;
+  font-weight: bold;
+  transition: all 0.3s;
 }
 .square span { font-size: 1.2em; text-align: center; }
-.square .itemName { font-size: 0.9em; margin-top: 4px; display: block; text-align: center; }
 .square.wrong { background-color: #ffcdd2; border-color: #f44336; }
 .square.correct { background-color: #c8e6c9; border-color: #4CAF50; }
 .neon { box-shadow: 0 0 8px #fff,0 0 12px #0ff,0 0 20px #0ff,0 0 30px #0ff; transform: scale(1.1); }
 
-/* ===== GAME INFO ===== */
-#gameInfo { text-align: center; font-size: 1em; font-weight: bold; margin:5px 0; }
-#score { text-align: center; font-size: 0.9em; margin-top: 5px; }
-#timerBarContainer { width: 70%; height: 10px; background: #ccc; margin: 5px auto; border-radius: 8px; overflow: hidden; }
-#timerBar { height: 100%; width: 100%; background: #0ff; transition: width 0.1s linear; }
+/* ===== INFO & CONTROLS ===== */
+#gameInfo { font-weight: bold; margin-top: 5px; }
+#score { font-size: 0.9em; margin-top: 8px; }
 
-/* ===== CONTROLS ===== */
-#controls { text-align: center; margin-top: 8px; }
-#controls button { padding: 6px 12px; margin: 0 4px; font-size: 0.9em; cursor: pointer; border: none; border-radius:6px; background:#4CAF50; color:white; transition:0.2s; }
-#controls button:hover { background:#45a049; }
+#timerBarContainer {
+  width: 70%;
+  height: 10px;
+  background: #ccc;
+  border-radius: 8px;
+  overflow: hidden;
+  margin: 8px auto;
+}
+#timerBar {
+  height: 100%;
+  width: 100%;
+  background: #4CAF50;
+  transition: width 0.1s linear;
+}
 
-/* ===== HEADER ===== */
-header {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    padding: 10px 15px;
-    background:#4CAF50;
-    color:white;
-    text-align:center;
-    font-size:1.5em;
-    font-weight:bold;
-    box-shadow:0 2px 6px rgba(0,0,0,0.2);
-    z-index:1000;
+#controls {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 15px;
 }
-header button { margin-left: 20px; padding:3px 8px; font-size:0.8em; cursor:pointer; border:none; border-radius:4px; background:white; color:#4CAF50; }
 
-/* ===== CHAT FLUTUANTE ===== */
-#chatBtn {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    background: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    font-size: 1.2em;
-    cursor: pointer;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    z-index: 2000;
+#controls button {
+  padding: 8px 14px;
+  font-size: 0.9em;
+  cursor: pointer;
+  border: none;
+  border-radius: 6px;
+  background: #4CAF50;
+  color: white;
+  transition: 0.2s;
 }
-#chatWindow {
-    position: absolute;
-    bottom: 70px;
-    right: 10px;
-    width: 250px;
-    height: 300px;
-    background: white;
-    border: 2px solid #4CAF50;
-    border-radius: 12px;
-    display: none;
-    flex-direction: column;
-    overflow: hidden;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    z-index: 2000;
+#controls button:hover {
+  background: #45a049;
 }
-#chatMessages { flex:1; padding:10px; overflow-y:auto; font-size:0.8em; display:flex; flex-direction:column; }
-#chatMessages p { margin:5px 0; padding:6px; border-radius:6px; max-width:80%; }
-.userMsg { background:#e0f7e9; align-self:flex-end; }
-.botMsg { background:#f0f0f0; align-self:flex-start; }
-#chatInput { display:flex; border-top:1px solid #ddd; }
-#chatInput input { flex:1; border:none; padding:6px; outline:none; font-size:0.9em; }
-#chatInput button { background:#4CAF50; color:white; border:none; padding:6px 10px; cursor:pointer; font-size:0.9em; }
-#chatInput button:hover { background:#45a049; }
+
+/* ===== FOOTER ===== */
+footer {
+  background: white;
+  color: #555;
+  text-align: center;
+  padding: 8px 0;
+  font-size: 0.85em;
+  box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
+}
+
+/* ===== DARK MODE ===== */
+body.dark-mode {
+  background: #121212;
+  color: #f0f0f0;
+}
+
+body.dark-mode header {
+  background: #1e1e1e;
+  color: #4CAF50;
+  box-shadow: 0 2px 6px rgba(255,255,255,0.1);
+}
+
+body.dark-mode .content {
+  background: #1c1c1c;
+  box-shadow: 0 4px 15px rgba(255,255,255,0.1);
+}
+
+body.dark-mode footer {
+  background: #1e1e1e;
+  color: #bbb;
+  box-shadow: 0 -2px 6px rgba(255,255,255,0.1);
+}
+
+body.dark-mode #timerBar {
+  background: #00e0ff;
+}
+
+body.dark-mode #controls button {
+  background: #00bfa5;
+}
+
+body.dark-mode #controls button:hover {
+  background: #00a08a;
+}
+
 </style>
 </head>
 <body>
 
 <header>
   <span id="siteTitle">Славянский клуб</span>
-  <button id="languageToggle">PT</button>
+  <div class="right-controls">
+    <button id="themeToggle">🌙</button>
+    <button id="languageToggle">PT</button>
+  </div>
 </header>
 
 <main>
@@ -158,30 +214,40 @@ header button { margin-left: 20px; padding:3px 8px; font-size:0.8em; cursor:poin
     <div id="timerBarContainer"><div id="timerBar"></div></div>
     <div id="gameArea"></div>
     <div id="score">❤️ 5 | ✅ 0 | ❌ 0 | Nível 1 | Rodada 1/10 | Acertos: 0%</div>
+
+    <!-- Controles visíveis e centralizados -->
     <div id="controls">
-      <button id="playBtn">▶ Play</button>
-      <button id="restartBtn">Recomeçar</button>
-      <button id="stopBtn">Parar</button>
-      <div style="margin-top:10px;">
-        <button id="backBtn" onclick="window.location.href='index.html'">🔙 Voltar</button>
-      </div>
+      <button id="playBtn">▶ Jogar</button>
+      <button id="restartBtn">🔄 Recomeçar</button>
+      <button id="stopBtn">⏹ Parar</button>
+      <button id="backBtn" onclick="window.location.href='index.html'">🔙 Voltar</button>
     </div>
   </div>
 </main>
 
-<button id="chatBtn">💬</button>
-<div id="chatWindow">
-  <div id="chatMessages">
-    <p class="botMsg">👋 Olá! Eu sou o Dimitri, seu assistente.</p>
-  </div>
-  <div id="chatInput">
-    <input type="text" id="msgInput" placeholder="Digite sua mensagem...">
-    <button id="sendBtn">➤</button>
-  </div>
-</div>
+<footer>
+  © 2025 Славянский клуб — Aprenda Russo e Português com diversão!
+</footer>
 
 <script src="jogo.js"></script>
-<script src="chat.js"></script>
+
+<script>
+// ===== MODO ESCURO =====
+const themeToggle = document.getElementById('themeToggle');
+const currentTheme = localStorage.getItem('theme');
+
+if (currentTheme === 'dark') {
+  document.body.classList.add('dark-mode');
+  themeToggle.textContent = '☀️';
+}
+
+themeToggle.addEventListener('click', () => {
+  document.body.classList.toggle('dark-mode');
+  const isDark = document.body.classList.contains('dark-mode');
+  themeToggle.textContent = isDark ? '☀️' : '🌙';
+  localStorage.setItem('theme', isDark ? 'dark' : 'light');
+});
+</script>
 
 </body>
 </html>
