--- a/index.html
+++ b/index.html
@@ -106,6 +106,53 @@
     padding: 10px; border: none; background: #4CAF50;
     color: #fff; cursor: pointer; border-radius: 0 0 10px 0;
   }
+
+
+/* ===== Footer ===== */
+#siteFooter {
+  position: fixed;      /* Fixa o rodapé na tela */
+  bottom: 0;            /* Alinhado à parte inferior */
+  left: 0;
+  width: 100%;          /* Ocupa toda a largura */
+  background: #4CAF50;  /* Mesma cor do header, se quiser */
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+  z-index: 999;         /* Fica acima de outros elementos */
+  font-size: 1em;
+}
+body {
+  padding-bottom: 50px; /* Garante que o conteúdo não fique escondido atrás do rodapé */
+}
+
+/* ===== MODO ESCURO ===== */
+
+#modoBtn {
+  background: #4CAF50;
+  color: white;
+  border: none;
+  padding: 8px 15px;
+  margin-left: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1em;
+}
+
+#modoBtn:hover {
+  background: #45a049; /* efeito hover */
+}
+
+
+body.dark-mode {
+  background: #121212;
+  color: #f0f0f0;
+}
+body.dark-mode header, 
+body.dark-mode footer {
+  background: #1e1e1e;
+}
+
+
 </style>
 </head>
 <body>
@@ -114,6 +161,7 @@
   <h1>Славянский клуб</h1>
   <button class="login" id="loginBtn">Login</button>
   <button class="login" id="logoutBtn" style="display:none;">Logout</button>
+  <button class="login" id="modoBtn">🌙</button>
 </header>
 <aside>
   <nav>
@@ -776,8 +824,25 @@ window.addEventListener('load', () => {
   }
 });
 
+
+
+// BOTAO MODO
+
+document.getElementById('modoBtn').addEventListener('click', () => {
+  document.body.classList.toggle('dark-mode');
+});
+
+
+
 </script>
 <script src="overlay.js"></script>
+
+
+
+<footer id="siteFooter">
+  <p>© 2025 Славянский клуб. Todos os direitos reservados.</p>
+</footer>
+
 
 </body>
 </html>
