--- a/jogo.html
+++ b/jogo.html
@@ -33,8 +33,17 @@ header {
 
 header #siteTitle {
   font-size: 1.3em;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
+header #siteTitle img {
+  width: 30px;
+  height: 30px;
+}
+
+/* ===== RIGHT CONTROLS ===== */
 header .right-controls {
   display: flex;
   align-items: center;
@@ -71,7 +80,7 @@ main {
   box-shadow: 0 4px 20px rgba(0,0,0,0.1);
   width: 90%;
   max-width: 900px;
-  height: 80vh; /* subido para ficar mais visível */
+  height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -194,18 +203,21 @@ body.dark-mode #controls button {
 body.dark-mode #controls button:hover {
   background: #00a08a;
 }
-
 </style>
 </head>
 <body>
 
 <header>
-  <span id="siteTitle">Славянский клуб</span>
+  <span id="siteTitle">
+    Славянский клуб 
+    <img id="emojiDimitry" src="emoji_dimitry.png" alt="Dimitry">
+  </span>
   <div class="right-controls">
     <button id="themeToggle">🌙</button>
     <button id="languageToggle">PT</button>
   </div>
 </header>
+
 
 <main>
   <div class="content">
@@ -215,7 +227,6 @@ body.dark-mode #controls button:hover {
     <div id="gameArea"></div>
     <div id="score">❤️ 5 | ✅ 0 | ❌ 0 | Nível 1 | Rodada 1/10 | Acertos: 0%</div>
 
-    <!-- Controles visíveis e centralizados -->
     <div id="controls">
       <button id="playBtn">▶ Jogar</button>
       <button id="restartBtn">🔄 Recomeçar</button>
@@ -248,6 +259,40 @@ themeToggle.addEventListener('click', () => {
   localStorage.setItem('theme', isDark ? 'dark' : 'light');
 });
 </script>
+
+
+<script>
+// ===== GARANTE QUE O EMOJI SEMPRE FIQUE VISÍVEL =====
+window.addEventListener("DOMContentLoaded", () => {
+  const title = document.getElementById("siteTitle");
+  if (!document.getElementById("emojiDimitry")) {
+    const img = document.createElement("img");
+    img.id = "emojiDimitry";
+    img.src = "emoji_dimitry.png";
+    img.alt = "Dimitry";
+    img.style.width = "30px";
+    img.style.height = "30px";
+    title.appendChild(img);
+  }
+});
+
+// ===== MODO ESCURO =====
+const themeToggle = document.getElementById('themeToggle');
+const currentTheme = localStorage.getItem('theme');
+
+if (currentTheme === 'dark') {
+  document.body.classList.add('dark-mode');
+  themeToggle.textContent = '☀️';
+}
+
+themeToggle.addEventListener('click', () => {
+  document.body.classList.toggle('dark-mode');
+  const isDark = document.body.classList.contains('dark-mode');
+  themeToggle.textContent = isDark ? '☀️' : '🌙';
+  localStorage.setItem('theme', isDark ? 'dark' : 'light');
+});
+</script>
+
 
 </body>
 </html>
