--- a/exercicio.html
+++ b/exercicio.html
@@ -113,13 +113,24 @@
       cursor: pointer;
       transition: background-color 0.3s;
     }
+
+
+/* ===== configuração do emoji dimitry ===== */
+
+.emoji-head {
+  width: 32px;
+  height: 32px;
+  vertical-align: middle;
+  margin-right: 8px;
+}
+
   </style>
 </head>
 
 <body>
   <!-- Header -->
   <header>
-    <h1 id="siteTitle">Славянский клуб</h1>
+    <h1>Славянский клуб <img src="emoji_dimitry.png" alt="Dimitry" class="emoji-head"> </h1>	 
     <button id="languageToggle">PT</button>
     <button id="darkModeToggle">🌙</button>
   </header>
