--- a/index.html
+++ b/index.html
@@ -153,12 +153,22 @@ body.dark-mode footer {
 }
 
 
+/* ===== configuração do emoji dimitry ===== */
+
+.emoji-head {
+  width: 32px;
+  height: 32px;
+  vertical-align: middle;
+  margin-right: 8px;
+}
+
+
 </style>
 </head>
 <body>
 
 <header>
-  <h1>Славянский клуб</h1>
+  <h1>Славянский клуб <img src="emoji_dimitry.png" alt="Dimitry" class="emoji-head"> </h1>	 
   <button class="login" id="loginBtn">Login</button>
   <button class="login" id="logoutBtn" style="display:none;">Logout</button>
   <button class="login" id="modoBtn">🌙</button>
@@ -170,7 +180,7 @@ body.dark-mode footer {
     <a href="jogo.html">🎨 Jogos</a>
     <a href="#">ℹ Quem somos</a>
   </nav>
-  <div class="mascote">🐻 Dimitry</div>
+  <div class="mascote"> Dimitry</div>
 </aside>
 
 <main>
@@ -824,25 +834,18 @@ window.addEventListener('load', () => {
   }
 });
 
-
-
 // BOTAO MODO
 
 document.getElementById('modoBtn').addEventListener('click', () => {
   document.body.classList.toggle('dark-mode');
 });
 
-
-
 </script>
 <script src="overlay.js"></script>
-
-
 
 <footer id="siteFooter">
   <p>© 2025 Славянский клуб. Todos os direitos reservados.</p>
 </footer>
-
 
 </body>
 </html>
